data/v0_batch0/v0_batch0_2_0.err
Invalid MIT-MAGIC-COOKIE-1 keyNEURON -- VERSION 7.8.1-1-gda13bb7c HEAD (da13bb7c) 2020-07-22
Duke, Yale, and the BlueBrain Project -- Copyright 1984-2019
See http://neuron.yale.edu/neuron/credits

Additional mechanisms from files
 mod//cadecay_destexhe.mod mod//HH_traub.mod mod//IL_gutnick.mod mod//IM_cortex.mod mod//IT_huguenard.mod
>>> 
>>>   File "stdin", line 1
    [A
    ^
SyntaxError: invalid syntax
>>> 
